[package]
name = "destiny-gear-optimizer-rust"
version = "0.1.0"
authors = ["David Kraeutmann <kane@kane.cx>"]
edition = "2018"

[dependencies]
rayon = "1.3.1"
dashmap = "3.11.5"
lazy_static = "1.4.0"
packed_simd = "0.3.3"

[dependencies.smallvec]
version = "1.4.0"
features = ["union", "const_generics"]

[profile.release]
debug = true

[build]
rustflags = ["-C target-cpu=native"]