[package]
name = "destiny-gear-optimizer-rust"
version = "0.1.0"
authors = ["David Kraeutmann <kane@kane.cx>"]
edition = "2018"

[dependencies]
rayon = "1.3.1"
lazy_static = "1.4.0"
packed_simd = "0.3.3"
sled = "0.32.0"
bincode = "1.3.1"

[dependencies.serde]
version = "1.0.114"
features = ["derive"] 

[dependencies.dashmap]
version = "3.11.5"
features = ["serde"]

[profile.release]
debug = true
lto = true
